[project]
name = "project-2-elskas-m25-555"
version = "0.1.0"
description = "Primitive db project"
authors = [
    {name = "Kirill Elskas",email = "rbhbk2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "primitive_db", from = "src" }
]

[tool.poetry.scripts]
project = "primitive_db.main:main"